# AndroidCameraVulkan

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gain/android_camera_vulkan/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniImpl.cpp
app/src/main/cpp/engine/: CMakeLists.txt  VulkanBufferWrapper.cpp  VulkanBufferWrapper.h  VulkanContext.cpp  VulkanContext.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDeviceWrapper.hpp  VulkanImageWrapper.cpp  VulkanImageWrapper.h  VulkanSwapChain.cpp  VulkanSwapChain.h  camera.hpp
app/src/main/cpp/engine/util/: LogUtil.h
app/src/main/cpp/processors/: EngineContext.cpp  EngineContext.h  Engine_CameraHwb.cpp  Engine_CameraHwb.h  Processor.cpp  Processor.h
app/src/main/cpp/processors/includes/: cube_data.h
app/src/main/java/com/gain/android_camera_vulkan/: CameraFragment.kt  MainActivity.kt  NativeVulkan.java
app/src/main/java/com/gain/android_camera_vulkan/camera/: AutoFitSurfaceView.kt  CameraCore.kt  CameraSizes.kt  CameraTextureView.kt
app/src/main/res/layout/: activity_main.xml  fragment_camera.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/shaders/: shader_13_camerahwb.frag  shader_13_camerahwb.vert
app/src/test/java/com/gain/android_camera_vulkan/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
